[package]
description = "The parts of OpenBSD libc that make sense on wasm32-unknown-unknown."
edition = "2018"
keywords = ["libc"]
license = "BSD-3-Clause AND ISC AND MIT"
links = "alula-wasm32-unknown-unknown-openbsd-libc"
name = "alula-wasm32-unknown-unknown-openbsd-libc"
repository = "https://github.com/alula/wasm32-unknown-unknown-openbsd-libc"
version = "0.2.1"

[build-dependencies]
cc = "1"
